# ratvec

./: .bumpversion.cfg  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
data/CGN/: POS_sequences_100.txt  POS_sequences_1000.txt  POS_sequences_2000.txt  POS_sequences_3000.txt  POS_sequences_5000.txt
data/parsed/: all_pos.txt  negative_pos.txt  positive_pos.txt
data/sarfari/full/: smiles.txt  vectors_1000.txt
src/ratvec/: __init__.py  __main__.py  baseline.ipynb  classifiers.py  cli.py  constants.py  eval_utils.py  evaluation.py  evaluation_clin30.py  evaluation_pIC50.py  kernel_utils.py  metrics.py  optimize.py  protein_mapper.py  protein_seq_reader.py  protein_seq_sparse_annotation.py  similarity.py  similarity_fast.pyx  similarity_slow.py  train.py  utils.py  version.py
tests/: test_utils.py
