##########################
# Setup.py Configuration #
##########################
[metadata]
name = ratvec
version = '0.1.1-dev'
description = Generating dense embeddings for proteins using kernel PCA
long_description = file: README.rst

# URLs associated with PyBEL
url = https://github.com/ratvec/ratvec

# Author information
author = Eduardo Brito
author_email = eduardo.alfredo.brito.chacon@iais.fraunhofer.de
maintainer = Eduardo Brito
maintainer_email = eduardo.alfredo.brito.chacon@iais.fraunhofer.de

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
    Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

keywords =
	Representation Learning
	Kernel PCA
	Principle Component Analysis
	PCA

[options]
install_requires =
    click>=7.0
    requests
    distance
    numpy
    scipy
    tqdm
    sklearn
    cython
    click
    biopython

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ratvec = ratvec.cli:main
